# git-kudos

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml  linux.yml  macos.yml  windows.yml
completion/: git-kudos.fish  git-kudos.sh  git-kudos.zsh
snap/: snapcraft.yaml
src/: cmakeConfig.hpp.in  main.cpp
